# prop

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/: psq.dyon  rec-syntax.txt  rec.dyon
examples/: ava_modal.rs  constructive.rs  hooo_dual_and.rs  modal.rs  ps_bool.rs  ps_comp.rs  ps_false.rs  ps_formation.rs  ps_norm.rs  ps_refl.rs  ps_uniq_q.rs  qubit_trait.rs  sq_trans.rs  sq_uniq.rs  symbolic_distinction.rs
src/: and.rs  ava_modal.rs  avatar_extensions.rs  con_qubit.rs  eq.rs  existence.rs  fun.rs  fun_traits.rs  halt.rs  hooo.rs  hooo_traits.rs  hott.rs  imply.rs  lib.rs  mid.rs  modal.rs  nat.rs  not.rs  or.rs  path_semantics.rs  psq.rs  quality.rs  quality_traits.rs  quantify.rs  qubit.rs  queenity.rs  sd.rs  tauto.rs  univalence.rs
src/fun/: app.rs  bool_alg.rs  comp.rs  dep.rs  dup.rs  eqx.rs  feq.rs  fin.rs  fnat.rs  fun_ext.rs  hott.rs  id.rs  inv.rs  is_const.rs  lam.rs  list.rs  natc.rs  norm.rs  phott.rs  real.rs  subst.rs  tup.rs  ty.rs  typ.rs
src/hooo/: pow.rs  tauto.rs
src/path_semantics/: lprop.rs  pord.rs  ty.rs
