[package]
name = "prop"
version = "0.15.0"
authors = ["Sven Nilsen <bvssvni@gmail.com>"]
edition = "2018"
description = "Propositional logic with types in Rust"
license = "MIT"
readme = "README.md"
repository = "https://github.com/advancedresearch/prop.git"
homepage = "https://github.com/advancedresearch/prop"
keywords = ["advancedresearch", "theorem", "proving", "logic", "constructive"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "prop"

[dependencies]

[features]
default = []
pure_platonism = []
pure_seshatism = []
